--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,11 @@ updates:
       - dependency-name: "io.netty:*"
       - dependency-name: "com.fasterxml.jackson.core:*"
       - dependency-name: "com.fasterxml.jackson.module:*"
+   ignore:
+    - dependency-name: "io.netty:*"
+      update-types:
+       - major
+       - minor
   - package-ecosystem: "maven"
     directory: "/core-io-deps"
     schedule:
@@ -17,3 +22,8 @@ updates:
       - dependency-name: "io.netty:*"
       - dependency-name: "com.fasterxml.jackson.core:*"
       - dependency-name: "com.fasterxml.jackson.module:*"
+   ignore:
+    - dependency-name: "io.netty:*"
+      update-types:
+       - major
+       - minor
